--- a/hello-world-rest-interface-db-driven-with-spring-boot/src/main/resources/application.yml
+++ b/hello-world-rest-interface-db-driven-with-spring-boot/src/main/resources/application.yml
@@ -2,9 +2,11 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/msa
     username: root
-    # password: password
+    password: root
     driver-class-name: com.mysql.jdbc.Driver
     
   jpa:
     generate-ddl: true
     show-sql: true
+server:
+  port: 8082
