Eureka server and client.

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@
 !hello-world-rest-interface/
 !hello-world-rest-interface-with-spring-boot/
 !hello-world-rest-interface-db-driven-with-spring-boot/
+!demo
+!item-info
 
