Added Item Review and Monitoring Service.

--- a/item-review/pom.xml
+++ b/item-review/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.sanjeevsachdev</groupId>
-	<artifactId>item-info</artifactId>
+	<artifactId>item-review</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>item-info</name>
+	<name>item-review</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
@@ -40,18 +40,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-hystrix</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>		
-		
 	</dependencies>
 
 	<dependencyManagement>
