--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@
 !hello-world-rest-interface-with-spring-boot/
 !hello-world-rest-interface-db-driven-with-spring-boot/
 !demo
-!item-info
+!item-info/
+!item-review/
+!monitoring-service/
 
